--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,10 @@
 <h1>Help</h1>
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
-</p>
+<p align = "center"> 
+   进一步了解ruby on rails：<br></br> 
+   <a href="http://www.railstutorial.org/help">Rails 教程页面</a><br><br> 
+   <a href="http://www.ruby-china.org">Rails 社区</a> 
+   <!--更多的相关教程：--> 
+   <!--</br>--> 
+   <!--<a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>--> 
+   <!--book</a>.--> 
+ </p> 
